--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umituz/react-native-legal",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Legal screens for React Native apps - Terms of Service and Privacy Policy",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
@@ -37,6 +37,7 @@
     "react-native": ">=0.74.0",
     "@umituz/react-native-design-system": "*",
     "@umituz/react-native-design-system-theme": "*",
+    "@umituz/react-native-design-system-organisms": "*",
     "@umituz/react-native-localization": "*",
     "react-native-safe-area-context": "^4.0.0"
   },
