refactor: implement SOLID principles and improve package architecture
- Remove hardcoded text and make all components fully generic
- Add ContentValidationService for validation logic
- Add StyleCacheService for centralized style management
- Move business logic out of screens into dedicated services
- Add comprehensive test suite with Jest
- Improve TypeScript configuration and .gitignore
- Add __DEV__ console logs for debugging
- Ensure all components follow SOLID, DRY, and KISS principles
- Make package ready for hundreds of applications with dynamic content

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,65 @@ build/
 lib/
 *.tsbuildinfo
 
+# TypeScript
+*.tsbuildinfo
+
+# Runtime
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
+coverage/
+*.lcov
+.nyc_output/
+
+# Logs
+logs
+*.log
+
+# Cache
+.cache
+.parcel-cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.npm
+.eslintcache
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# Temporary
+tmp/
+temp/
+
+# Package
+*.tgz
+*.tar.gz
+
+# Testing
+.nyc_output/
+
 # Runtime data
 pids
 *.pid
