--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "types": ["react", "react-native"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx", "**/__tests__/**"]
 }
 
 
